finished ui for donate page, modified style.css, updated profile.js to no longer when not logged in, fixed alignment issues in donation-form.pug, updated navbar-unauthenticated.pug

--- a/express-app/public/stylesheets/donation-form.css
+++ b/express-app/public/stylesheets/donation-form.css
@@ -1,10 +1,15 @@
-h1{
-    color: deeppink;
-    font-size: 25px;
-}
-
 #labels{
     color: deeppink;
+}
+
+#label-border{
+    border-color: deepskyblue;
+    border-width: 4px;
+}
+
+#expiration-date{
+    border-color: deepskyblue;
+    border-width: 4px;
 }
 
 #publish-button{
