--- a/express-app/public/stylesheets/style.css
+++ b/express-app/public/stylesheets/style.css
@@ -3,6 +3,11 @@ html{
   font-family: 'Oswald', sans-serif;
 }
 
+h1{
+  color: deeppink;
+  font-size: 25px;
+}
+
 .container-fluid {
   width: 100%;
   padding: 0px;
